--- a/Day 2 - [Clock]/index.html
+++ b/Day 2 - [Clock]/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="title">timer <i class="fa-solid fa-bars-staggered"></i></h1>
+    <!-- <h1 class="title">timer <i class="fa-solid fa-bars-staggered"></i></h1> -->
     <div class="container">
         <!-- Analog Clock -->
         <div class="clock">
@@ -25,6 +25,7 @@
 
         <!-- Digital Clock -->
         <div class="digital-clock">
+            <h1 class="title">timer <i class="fa-solid fa-bars-staggered"></i></h1>
             <h1 id="digital-time">00:00:00</h1>
             <p id="digital-date">Loading Date...</p>
         </div>
