--- a/Day 16 - [Console-Tools]/index.html
+++ b/Day 16 - [Console-Tools]/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day - 16 | Console Tools!</title>
   </head>
-  <body style="background: #1d1d1d">
+  <body style="background: #1d1d1d; color: aquamarine; cursor: pointer">
     <p onclick="makeGreen()">xBREAKxDOWNx</p>
 
     <script src="script.js"></script>
